--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,1 @@
-<mat-toolbar color="primary">
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-    <mat-icon>menu</mat-icon>
-    <mat-icon>close</mat-icon>
-  </button>
-  <span>Daily Wave News</span>
-</mat-toolbar>
+<app-side-nav></app-side-nav>
