--- a/src/app/components/side-nav/side-nav.component.html
+++ b/src/app/components/side-nav/side-nav.component.html
@@ -1,1 +1,71 @@
-<span>navworks</span>
+<mat-toolbar color="primary">
+    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+        <mat-icon (click)="this.sideNav.open()" *ngIf="!sideNav?.opened">menu</mat-icon>
+        <mat-icon (click)="this.sideNav.close()" *ngIf="sideNav?.opened">close</mat-icon>
+    </button>
+    <span>Daily News Wave</span>
+</mat-toolbar>
+
+
+<mat-sidenav-container>
+    <mat-sidenav #sidenav="matSidenav" class="p-5">
+        <div class="flex items-center justify-center m-3 relative">
+            <img alt="Remy Sharp" src="https://placehold.co/50" class="rounded-full w-24 h-24" />
+        </div>
+        <div class="mt-5">
+            <p class="text-lg font-semibold leading-6 text-gray-900">News Sources</p>
+        </div>
+        <mat-divider></mat-divider>
+        <ul role="list" class="divide-y divide-gray-100">
+            <li class="flex justify-between gap-x-6 py-5">
+                <div class="flex gap-x-2 p-2">
+                    <mat-icon>event_note</mat-icon>
+                    <div class="min-w-0 flex-auto">
+                        <p class="text-sm font-semibold leading-6 text-gray-900">ABC NEWS</p>
+                        <p class="mt-1 truncate text-xs leading-5 text-gray-500">Decsp</p>
+                    </div>
+                </div>
+                <div class="hidden sm:flex sm:flex-col sm:items-end p-2">
+                    <p class="text-sm leading-6 text-gray-900">Category</p>
+                </div>
+            </li>
+        </ul>
+    </mat-sidenav>
+    <mat-sidenav-content class="content mat-elevation-z4">
+        <section class="bg-gray-100 pt-5">
+            <div class="container px-5 mx-auto max-w-7x1">
+                <div class="flex flex-wrap w-full mb-4 p-4">
+                    <div class="w-full mb-6 lg:mb-0">
+                        <p class="text-2xl font-semibold">Top 10 Articles</p>
+                        <div class="h-1 w-60 bg-indigo-500 rounded"></div>
+                    </div>
+                </div>
+                <div class="flex flex-wrap -m-4">
+                    <ng-container>
+                        <div class="xl:w-1/3 md:w-1/2 p-4">
+                            <div class="bg-white p-6 rounded-lg">
+                                <img alt="Remy Sharp" class='h-[500px] w-[500px]' src="https://placehold.co/50" />
+                                <div class="flex justify-between mb-3">
+                                    <p class="text-md font-medium title-font">Author:
+                                        name</p>
+                                    <p style="text-overflow: ellipsis;
+                                    display: -webkit-box;" class="text-gray-800 text-sm">Posted: 12/12/12</p>
+                                </div>
+                                <p class="text-lg text-gray-900 font-medium title-font overflow-hidden">ABC
+                                    News
+                                </p>
+                                <div class="h-1 w-32 bg-indigo-500 rounded mb-3"></div>
+                                <p class="leading-relaxed text-base">desc</p>
+                                <span>
+                                    <a class="text-blue-500" href="#" target="_blank">
+                                        read more....
+                                    </a>
+                                </span>
+                            </div>
+                        </div>
+                    </ng-container>
+                </div>
+            </div>
+        </section>
+    </mat-sidenav-content>
+</mat-sidenav-container>
