--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -6,6 +5,7 @@
 html,
 body {
     height: 100%;
+    background: rgb(243 244 246 / 1);
 }
 
 body {
