--- a/src/app/components/side-nav/side-nav.component.html
+++ b/src/app/components/side-nav/side-nav.component.html
@@ -9,55 +9,53 @@
 
 <mat-sidenav-container>
     <mat-sidenav #sidenav="matSidenav" class="p-5">
-        <div class="flex items-center justify-center m-3 relative">
-            <img alt="Remy Sharp" src="https://placehold.co/50" class="rounded-full w-24 h-24" />
-        </div>
         <div class="mt-5">
             <p class="text-lg font-semibold leading-6 text-gray-900">News Sources</p>
         </div>
-        <mat-divider></mat-divider>
-        <ul role="list" class="divide-y divide-gray-100">
-            <li class="flex justify-between gap-x-6 py-5">
-                <div class="flex gap-x-2 p-2">
+        <mat-divider class="mb-2"></mat-divider>
+        <ul role="list" class="divide-y divide-gray-100" *ngFor="let source of sources">
+            <li class="flex-col py-2 hover:bg-gray-100 cursor-pointer" (click)="searchSource(source)">
+                <div class="flex gap-x-2 px-2">
                     <mat-icon>event_note</mat-icon>
                     <div class="min-w-0 flex-auto">
-                        <p class="text-sm font-semibold leading-6 text-gray-900">ABC NEWS</p>
-                        <p class="mt-1 truncate text-xs leading-5 text-gray-500">Decsp</p>
+                        <p class="text-sm font-semibold leading-6 text-gray-900">{{source.name}}</p>
                     </div>
                 </div>
-                <div class="hidden sm:flex sm:flex-col sm:items-end p-2">
-                    <p class="text-sm leading-6 text-gray-900">Category</p>
+                <div class="hidden sm:flex sm:flex-col px-2 sm:hidden">
+                    <p class="text-gray-500 text-xs">{{source.category}} news</p>
                 </div>
+                <p class="text-gray-500 text-xs hidden sm:block">{{source.category}} news</p>
+                <mat-divider></mat-divider>
             </li>
         </ul>
     </mat-sidenav>
     <mat-sidenav-content class="content mat-elevation-z4">
-        <section class="bg-gray-100 pt-5">
-            <div class="container px-5 mx-auto max-w-7x1">
+        <section class="bg-gray-100 pt-5 flex flex-col h-full">
+            <div class="container px-5 mx-auto max-w-7x1 flex flex-wrap w-full mb-4 p-4">
                 <div class="flex flex-wrap w-full mb-4 p-4">
                     <div class="w-full mb-6 lg:mb-0">
-                        <p class="text-2xl font-semibold">Top 10 Articles</p>
+                        <p class="text-2xl font-semibold">{{selectedSource}}</p>
                         <div class="h-1 w-60 bg-indigo-500 rounded"></div>
                     </div>
                 </div>
-                <div class="flex flex-wrap -m-4">
-                    <ng-container>
-                        <div class="xl:w-1/3 md:w-1/2 p-4">
-                            <div class="bg-white p-6 rounded-lg">
-                                <img alt="Remy Sharp" class='h-[500px] w-[500px]' src="https://placehold.co/50" />
+                <div class="flex flex-wrap -m-4 flex-grow overflow-auto">
+                    <ng-container *ngFor="let article of articles">
+                        <div class="xl:w-1/3 md:w-1/2 p-4 sm:w-full">
+                            <div class="bg-white p-6 rounded-lg h-full flex flex-col justify-between">
+                                <img alt="{{article.title}}" class='h-[500px] w-[500px]' src="{{article.urlToImage}}" />
                                 <div class="flex justify-between mb-3">
-                                    <p class="text-md font-medium title-font">Author:
-                                        name</p>
+                                    <p class="text-gray-800 text-sm title-font">Author:
+                                        {{article.author}}</p>
                                     <p style="text-overflow: ellipsis;
-                                    display: -webkit-box;" class="text-gray-800 text-sm">Posted: 12/12/12</p>
+                                    display: -webkit-box;" class="text-gray-800 text-sm">Posted: {{article.publishedAt
+                                        | date}}</p>
                                 </div>
-                                <p class="text-lg text-gray-900 font-medium title-font overflow-hidden">ABC
-                                    News
-                                </p>
+                                <p class="text-lg text-gray-900 font-medium title-font overflow-hidden">
+                                    {{article.title}}</p>
                                 <div class="h-1 w-32 bg-indigo-500 rounded mb-3"></div>
-                                <p class="leading-relaxed text-base">desc</p>
+                                <p class="leading-relaxed text-base">{{article.description}}</p>
                                 <span>
-                                    <a class="text-blue-500" href="#" target="_blank">
+                                    <a class="text-blue-500" href="{{article.url}}" target="_blank">
                                         read more....
                                     </a>
                                 </span>
