--- a/src/app/components/side-nav/side-nav.component.html
+++ b/src/app/components/side-nav/side-nav.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">
+<mat-toolbar style="background: black; color: white; position: fixed; z-index: 999;">
     <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
         <mat-icon (click)="this.sideNav.open()" *ngIf="!sideNav?.opened">menu</mat-icon>
         <mat-icon (click)="this.sideNav.close()" *ngIf="sideNav?.opened">close</mat-icon>
@@ -9,10 +9,7 @@
 
 <mat-sidenav-container class="containerStyled">
     <mat-sidenav #sidenav="matSidenav" class="p-5 navStyled">
-        <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-            <mat-icon (click)="this.sideNav.close()" *ngIf="sideNav?.opened">close</mat-icon>
-        </button>
-        <div class="mt-5">
+        <div class="mt-7">
             <p class="text-lg font-semibold leading-6 text-gray-900">News Sources</p>
         </div>
         <mat-divider class="mb-2"></mat-divider>
@@ -22,8 +19,9 @@
                 <input matInput type="text" [(ngModel)]="searchTerm" (ngModelChange)="updateSearch(searchTerm)" />
             </mat-form-field>
         </div>
-        <ul role="list" class="divide-y divide-gray-100 px-3" *ngFor="let source of sources">
-            <li class="flex-col py-2 hover:bg-gray-100 cursor-pointer" (click)="getSource(source)">
+        <ul role="list" class="divide-y divide-gray-100 px-3">
+            <li *ngFor="let source of sources" class="flex-col py-2 hover:bg-gray-100 cursor-pointer"
+                (click)="getSource(source)">
                 <div class="flex gap-x-2">
                     <mat-icon>event_note</mat-icon>
                     <div class="min-w-0 flex-auto mr-5">
@@ -34,25 +32,24 @@
                     <p class="text-gray-500 text-xs">{{source.category}} news</p>
                 </div>
                 <p class="text-gray-500 text-xs hidden sm:block">{{source.category}} news</p>
-                <mat-divider></mat-divider>
             </li>
         </ul>
     </mat-sidenav>
-    <mat-sidenav-content position="end" class="navContentedStyled">
-
-
-        <section class="bg-gray-100 pt-5 flex flex-col h-full">
-            <div class="container px-5 mx-auto max-w-7x1 flex flex-wrap w-full mb-4 p-4">
+    <mat-sidenav-content class="navContentedStyled px-10" style="background: #f3dfc166;">
+        <app-slide-show></app-slide-show>
+        <section class="bg-gray-100 pt-5 flex flex-col h-full w-full feedSec" style="background: transparent">
+            <div class="container mx-auto max-w-7x1 flex flex-wrap w-full mb-4 p-4">
                 <div class="flex flex-wrap w-full mb-4 p-4">
                     <div class="w-full mb-6 lg:mb-0">
                         <p class="text-2xl font-semibold">{{selectedSource}}</p>
-                        <div class="h-1 w-60 bg-indigo-500 rounded"></div>
+                        <div class="h-1 w-60 rounded" style="background: black;"></div>
                     </div>
                 </div>
-                <div class="flex flex-wrap -m-4 flex-grow overflow-auto">
-                    <ng-container *ngFor="let article of articles">
+                <div class="flex flex-wrap -m-4 px-5 flex-grow overflow-auto">
+                    <ng-container *ngFor="let article of articles" class="mat-elevation-z2">
                         <div class="xl:w-1/3 md:w-1/2 p-4 sm:w-full">
-                            <div class="bg-white p-6 rounded-lg h-full flex flex-col justify-between">
+                            <div class="bg-white p-6 rounded-lg h-full flex flex-col justify-between"
+                                style="box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;">
                                 <img alt="{{article.title}}" class='h-[500px] w-[500px]' src="{{article.urlToImage}}" />
                                 <div class="flex justify-between mb-3">
                                     <p class="text-gray-800 text-sm title-font">Author:
@@ -63,10 +60,10 @@
                                 </div>
                                 <p class="text-lg text-gray-900 font-medium title-font overflow-hidden">
                                     {{article.title}}</p>
-                                <div class="h-1 w-32 bg-indigo-500 rounded mb-3"></div>
+                                <div class="h-1 w-32 bg-indigo-700 rounded mb-3"></div>
                                 <p class="leading-relaxed text-base">{{article.description}}</p>
                                 <span>
-                                    <a class="text-blue-500" href="{{article.url}}" target="_blank">
+                                    <a class="text-blue-700" href="{{article.url}}" target="_blank">
                                         read more....
                                     </a>
                                 </span>
